@@ -98,6 +98,12 @@
   </bibliomixed>
 
   <bibliomixed>
+    Johansen, S&oslash;ren (1995) <title>Likelihood-Based Inference in
+      Cointegrated Vector Autoregressive Models</title>, Oxford: Oxford
+    University Press. 
+  </bibliomixed>
+
+  <bibliomixed>
     <bibliomset relation='article'>Kiviet, J. F. (1986) <title>On the
 	Rigour of Some Misspecification Tests for Modelling Dynamic
 	Relationships</title>,</bibliomset> <bibliomset
