@@ -91,11 +91,11 @@
 </xsl:template>
 
 <xsl:template match="argblock">
-  <xsl:if test="(@separated)"><literal>; <literal></xsl:if>
-  <xsl:if test="(@optional)"><literal>[ <literal></xsl:if>
+  <xsl:if test="(@separated)"><literal>; </literal></xsl:if>
+  <xsl:if test="(@optional)"><literal>[ </literal></xsl:if>
   <xsl:apply-templates/>
-  <xsl:if test="(@separated)"><literal>; <literal></xsl:if>
-  <xsl:if test="(@optional)"><literal>] <literal></xsl:if>
+  <xsl:if test="(@separated)"><literal>; </literal></xsl:if>
+  <xsl:if test="(@optional)"><literal>] </literal></xsl:if>
 </xsl:template>
 
 <xsl:template match="argument">
